@@ -1,6 +1,8 @@
-<configure 
-  xmlns="http://namespaces.zope.org/zope" 
+<configure
+  xmlns="http://namespaces.zope.org/zope"
   xmlns:plone="http://namespaces.plone.org/plone">
+
+  <include package="plone.restapi"  />
 
   <adapter
     factory=".controlpanel.ZoteroControlpanel"
