@@ -4,5 +4,6 @@ Changelog
 1.0-dev0 - (unreleased)
 -----------------------
 
-* Initial release.
-  [eea]
+* Initial release: Configure Zotero via controlpanel and @zotero RestAPI endpoint
+  [@avoinea refs #120538]
+
